# nokio

./: .gitignore  README.md  nokio.code-workspace  pyproject.toml  user_log.md
data/: TransactionTemplates.json  kontoplan.json
data/Bokföring - Bokio - 5569979445/: 5569979445_2017.se  5569979445_2018.se  5569979445_2019.se  5569979445_2020.se  5569979445_2021.se  5569979445_2022.se  5569979445_2023.se  Balansrapport 2023-01-01-2023-12-31.xlsx  Resultatrapport 2023-01-01-2023-12-31.xlsx  Verifikationer_5569979445_2017.tsv  Verifikationer_5569979445_2018.tsv  Verifikationer_5569979445_2019.tsv  Verifikationer_5569979445_2020.tsv  Verifikationer_5569979445_2021.tsv  Verifikationer_5569979445_2022.tsv  Verifikationer_5569979445_2023.tsv  new_transactions.jsonc
data/Bokföring - Bokio - 5592945496/: 5592945496_2021.se  5592945496_2022.se  5592945496_2023.se  5592945496_2023.yaml  Balansrapport 2023-01-01-2023-12-31.xlsx  Resultatrapport 2023-01-01-2023-12-31.xlsx  Verifikationer_5592945496_2021.tsv  Verifikationer_5592945496_2022.tsv  Verifikationer_5592945496_2023.tsv  new_transactions.json
data/document/: sales.md
nokio/: __init__.py  bokio_import.py  general_ledger.py  kontoplan.py  transaction.py
nokio/app/: main.py
nokio/core/: config.py  utils.py
nokio/model/: transaction.py
tests/: test_bokio_import.py  test_general_ledger.py  test_transaction.py
tests/data/: bokio_test_import_2023.se  expected_results.py  new_transactions.jsonc
