[tool.poetry]
name = "nokio"
version = "0.1.0"
description = ""
authors = ["Mikael Backlund <mikael.backlund@wsp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pymongo = "^4.5.0"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ipython = "^8.16.1"
isort = "^5.12.0"
black = "^23.9.1"
pytest = "^7.4.2"
dictdiffer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
